Use PNG logo and update favicon MIME type

--- a/src/components/ProfileHero.astro
+++ b/src/components/ProfileHero.astro
@@ -7,6 +7,6 @@ const { title, subtitle } = Astro.props;
     <p class="text-base text-[var(--text-muted)] md:text-lg">{subtitle}</p>
   </div>
   <div class="h-28 w-28 opacity-95 md:h-32 md:w-32">
-    <img src={`${import.meta.env.BASE_URL}assets/img/amarantha-logo.jpg`} alt="amarantha wordmark" class="h-full w-full object-contain" />
+    <img src={`${import.meta.env.BASE_URL}assets/img/amarantha-logo.png`} alt="amarantha wordmark" class="h-full w-full object-contain" />
   </div>
 </section>
