Hide layout toggle on desktop

--- a/src/components/LayoutToggle.astro
+++ b/src/components/LayoutToggle.astro
@@ -215,4 +215,10 @@ const modes = [
     white-space: nowrap;
     border: 0;
   }
+
+  @media (min-width: 1024px) {
+    .layout-toggle {
+      display: none;
+    }
+  }
 </style>
